ensure gifit button is aligned right

--- a/src/styles/content.less
+++ b/src/styles/content.less
@@ -34,12 +34,12 @@
 @ease_out_expo: cubic-bezier( 0.19, 1, 0.22, 1 );
 
 // Integration styles
-.ytp-button-gif {
+.ytp-button-gif.ytp-button {
 	float: right;
 }
 
 .player-api.gifit-active {
-	.ytp-button-gif {
+	.ytp-button-gif.ytp-button {
 		.gifit-button {
 			color: @color_youtube_toolbar_active;
 		}
